# flask_netology

./: .env_example  client.py  pyproject.toml  readme.md
src/: __main__.py  builder.py  database.db
src/config/: __init__.py  config.py
src/db/: __init__.py  database.py  models.py
src/schemas/: ads.py
src/services/: ads.py
